# omori-map-preview-renderer

./: .gitignore  Cargo.toml  LICENSE  flake.nix  readme.md
.github/workflows/: build.yml
src/: main.rs  map_data.rs
