[package]
name = "renderifier"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
png = "0.16.8"
rayon = "1.5.1"
resize = "0.7.2"
rgb = "0.8.27"